Add ability to open .tar.gz, and add ability to specify memory arguments in wrapper.conf